# diannex

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Syntax.md
.github/workflows/: build.yml
include/: Binary.h  BinaryWriter.h  Bytecode.h  Context.h  Instruction.h  Lexer.h  ParseResult.h  Parser.h  Project.h  Token.h  Translation.h  Utility.h  main.h
src/: Binary.cpp  BinaryWriter.cpp  Bytecode.cpp  Context.cpp  Lexer.cpp  Parser.cpp  Translation.cpp  Utility.cpp  main.cpp
src/libs/miniz/: miniz.c
